@@ -1,4 +1,4 @@
-$Id: TODO,v 1.58 2011-12-08 20:34:41 pertusus Exp $
+$Id: TODO,v 1.59 2012-01-15 20:51:14 pertusus Exp $
 This is the todo list for GNU Texinfo.
 If you are interested in working on any of these, email bug-texinfo@gnu.org.
 
@@ -71,10 +71,6 @@ If you are interested in working on any of these, email bug-texinfo@gnu.org.
 * Makeinfo:
   - add automatic generation of @node and @menu.
   - Improve the HTML customization API.
-  - A detexinfo program, like detex or delatex.  This command would
-    strip all the texinfo commands out, and would be used as a filter on
-    the way to a speller.  An option would be to NOT strip comments out.
-    makeinfo --set RAW_TEXT comes close.
   - HTML: support thumbnails.
   - HTML: have a library of different CSS styles.
     http://mail.gnu.org/archive/html/bug-texinfo/2004-01/msg00025.html
