@@ -4,6 +4,9 @@
 	remove @-commands that have no effect and add new @-commands available
 	as customization options.
 
+	* tp/texi2any.pl, tp/Texinfo/Convert/TextContent.pm, tp/Makefile.am, TODO: 
+	New converter that strips commands from output.
+
 2012-01-14  Patrice Dumas  <pertusus@free.fr>
 
 	Move tests from texi2html that are still relevant to tp.
